[package]
name = "dstn-storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
avro-rs = "0.13.0"
tokio = { version = "1.23.0", features = ["full","time"] }
chrono = "0.4.23"
crossbeam-queue = "0.3.8" 
